0502A 百度地图 轨迹记录，但不能保存，只能在GPS连接的情况下记录轨迹，wifi，基站定位都不会去记录轨迹。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'org.xutils:xutils:3.5.0'
+
+    //http://blog.csdn.net/a49220824/article/details/68953432
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
 }
