0523 优化其他逻辑，完成赛事浏览，我的赛事查看，完成报名比赛功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,9 @@
 
         <activity android:name=".db.entity.DBTestActivity" />
         <activity android:name=".sign.LoginA" />
-        <activity android:name=".game.GameDetailActivity"/>
-        <activity android:name=".user.BDTraceA"/>
+        <activity android:name=".game.GameDetailActivity" />
+        <activity android:name=".user.BDTraceA" />
+        <activity android:name=".game.MyGameActivity"></activity>
     </application>
 
 </manifest>
